--- a/src/main.scss
+++ b/src/main.scss
@@ -38,3 +38,9 @@ img{
     font-weight: 700;
     font-size: 30px;
 }
+
+// @media (max-width: 610px){
+//     .navbar{
+//         display: none;
+//     }
+//     }
