--- a/src/common/navbar/navbar.scss
+++ b/src/common/navbar/navbar.scss
@@ -12,12 +12,62 @@ display: flex;
 justify-content: center;
 align-items: center;
 gap: 80px;
+
+@media (max-width: 610px){
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 10;
+    left: -100%;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(22, 165, 208, 0.958);
+    transition: left 1s;
+}
 }
 
 &__item>a{
     color: white;
     font-weight: 500;
     font-size: 20px;
+    @media (max-width: 610px){
+        font-size: 30px;
     }
+
+    }
+
+&__mobile-btn{
+display: none;
+font-size: 25px;
+
+@media (max-width: 610px){
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    z-index: 10;
+    cursor: pointer;
 }
+}
+
+// &__mobile-close{
+//     display: none;
+// }
+
+&__active{
+    left: 0;
+}
+
+}
+
+
+
+        // @media (max-width: 610px){
+        //     .navbar__mobile-menu{
+        //         display: none;
+        //     }
+        //     }
 
