--- a/src/common/footer/footer.scss
+++ b/src/common/footer/footer.scss
@@ -2,6 +2,10 @@
     background-color: #030631;
     padding: 40px 0;
 
+    @media (max-width: 670px){
+        padding: 30px 10px;
+    }
+
     &__container{
         display: flex;
         flex-direction: column;
@@ -9,5 +13,9 @@
         align-items: center;
         gap: 10px;
         font-size: 14px;
+
+        @media (max-width: 670px){
+text-align: center;
+        }
     }
 }
