--- a/src/common/header/header.scss
+++ b/src/common/header/header.scss
@@ -6,6 +6,12 @@
       line-height: 92px;
       color: #f1ebff;
       text-align: center;
+
+      @media (max-width: 610px){
+        font-size: 25px;
+        padding: 88px 10px;
+        line-height: 52px;
+    }
     }
   
     &__subtitle{
