--- a/src/common/navbar/navbar.scss
+++ b/src/common/navbar/navbar.scss
@@ -24,7 +24,7 @@ gap: 80px;
     bottom: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(22, 165, 208, 0.958);
+    background-color: #003580ed;
     transition: left 1s;
 }
 }
@@ -52,10 +52,6 @@ font-size: 25px;
     cursor: pointer;
 }
 }
-
-// &__mobile-close{
-//     display: none;
-// }
 
 &__active{
     left: 0;
