--- a/src/pages/nasaimage/nasaimage.scss
+++ b/src/pages/nasaimage/nasaimage.scss
@@ -13,6 +13,11 @@
         max-width: 800px;
         margin: 0 auto;
         color: #f1ebff;
+
+        @media (max-width: 610px){
+          padding: 80px 0;
+          font-size: 25px;
+        }
       }
     
       &__hero-title {
