--- a/src/pages/rovers/rovers.scss
+++ b/src/pages/rovers/rovers.scss
@@ -14,25 +14,54 @@
     max-width: 800px;
     margin: 0 auto;
     color: #f1ebff;
+    @media (max-width: 610px){
+      padding: 80px 0;
+      line-height: 33px;
+    }
   }
   &__hero-title {
     font-size: 38px;
+    @media (max-width: 610px){
+      font-size: 28px;
+    }
   }
   &__hero-desc {
     font-size: 24px;
+    @media (max-width: 610px){
+      font-size: 21px;
+    }
   }
 
   &__description {
+    padding: 0 10px;
     font-size: 24px;
     font-weight: 700;
     display: flex;
     flex-direction: column;
     gap: 10px;
     margin-bottom: 20px;
+    @media (max-width: 610px){
+      font-size: 22px;
+    }
+    @media (max-width: 420px){
+      font-size: 18px;
+    }
   }
 
+  &__text {
+    margin-bottom: 20px;
+    font-size: 24px;
+    @media (max-width: 610px){
+      font-size: 20px;
+    }
+  }
+
+
   &__search-text {
-    font-size: 30px;
+    font-size: 40px;
+    @media (max-width: 530px){
+      font-size: 34px;
+     }
   }
 
   &__search-container {
@@ -47,6 +76,10 @@
     display: flex;
     gap: 23px;
     margin-bottom: 20px;
+    @media (max-width: 530px){
+     flex-direction: column;
+    }
+
   }
 
   &__radio-inp {
@@ -57,12 +90,27 @@
   &__input-label {
     font-size: 30px;
     font-weight: 800;
+    box-shadow: 0px 1px 46px -9px rgb(7, 7, 241); 
   }
 
+&__input-subtitle{
+  font-size: 35px;
+  @media (max-width: 530px){
+    font-size: 30px;
+   }
+}
+
+&__input-format{
+  font-size: 25px;
+  @media (max-width: 530px){
+    font-size: 25px;
+   }
+}
+  
   &__input-date {
     color: black;
     outline: none;
-    height: 40px;
+    height: 45px;
     font-size: 25px;
     font-weight: 700;
     text-align: center;
@@ -124,14 +172,17 @@ align-items: center;
   justify-content: center;
   align-items: center;
   gap: 20px;
+  @media (max-width: 870px){
+    flex-direction: column;
+    gap: 8px;
+     }
 }
 
 &__bigphoto-img{
-  object-fit: cover;
+  object-fit: contain;
 width: 70%;
 height: 70vh;
 border-radius: 10px;
-border: 2px solid silver;
 }
 
 &__bigphoto-desc{
@@ -148,10 +199,28 @@ gap: 15px;
   cursor: pointer;
 }
 
-&__arrow{
-  margin: 20px;
-  font-size: 30px;
+&__arrow-l{
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  font-size: 40px;
   cursor: pointer;
-}
+  @media (max-width: 1160px){
+font-size: 28px;
+left: 1%;
+ }
+ }
+
+ &__arrow-r{
+  position: absolute;
+  top: 50%;
+  right: 2%;
+  font-size: 40px;
+  cursor: pointer;
+  @media (max-width: 1160px){
+font-size: 28px;
+right: 1%;
+ }
+ }
 
 }
