--- a/src/pages/nasaimage/nasaimage.scss
+++ b/src/pages/nasaimage/nasaimage.scss
@@ -29,6 +29,114 @@
       &__hero-desc {
         font-size: 24px;
       }
+      
+      &__photo-big{
+        position: sticky;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    background-color: rgba(12, 11, 67, 0.893);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+      }
+
+      &__photo-wrap{
+        height: 100vh;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    padding: 0 10px;
+    @media (max-width: 1130px){
+      flex-direction: column;
+
+       }
+      //  @media (max-width: 615px){
+      //   height: 80vh;
+      //   justify-content: start;
+
+      //    }
+      }
+
+      &__photo-img{
+        object-fit: contain;
+        height: 70%;
+        width: 70%;
+        border-radius: 10px;
+        @media (max-width: 1130px){
+          flex-direction: column;
+          height: 50%;
+
+           }
+      }
+
+      &__photo-text{
+        height: 60vh;
+        width: 90%;
+        overflow: scroll ;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        padding: 0 10px;
+        @media (max-width: 1130px){
+          height: 40vh;
+          // max-width: 800px;
+          padding: 0 10px;
+
+           }
+           @media (max-width: 615px){
+            height: 300px;
+            max-width: 400px;
+  
+             }
+             @media (max-width: 440px){
+              height: 300px;
+              max-width: 310px;
+    
+               }
+        }
+        
+        &__photo-desc{
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+          font-size: 17px;
+        }
+
+      &__close{
+        position: absolute;
+        top: 8%;
+        right: 5%;
+        font-size: 30px;
+        cursor: pointer;
+      }
+
+      &__arrow-l{
+        position: absolute;
+        top: 50%;
+        left: 2%;
+        font-size: 40px;
+        cursor: pointer;
+        @media (max-width: 1160px){
+      font-size: 28px;
+      left: 1%;
+       }
+       }
+      
+       &__arrow-r{
+        position: absolute;
+        top: 50%;
+        right: 2%;
+        font-size: 40px;
+        cursor: pointer;
+        @media (max-width: 1160px){
+      font-size: 28px;
+      right: 1%;
+       }
+       }
 
       &__search-row{
         width: 100%;
