--- a/src/pages/apod/apod.scss
+++ b/src/pages/apod/apod.scss
@@ -5,7 +5,6 @@
 }
 
 .apod {
-
   &__hero {
     padding: 180px 0;
     text-align: center;
@@ -13,7 +12,7 @@
     max-width: 800px;
     margin: 0 auto;
     color: #f1ebff;
-    @media (max-width: 610px){
+    @media (max-width: 610px) {
       padding: 80px 0;
       line-height: 33px;
     }
@@ -21,49 +20,48 @@
 
   &__hero-title {
     font-size: 38px;
-    @media (max-width: 610px){
+    @media (max-width: 610px) {
       font-size: 28px;
     }
   }
   &__hero-desc {
     font-size: 24px;
-    @media (max-width: 610px){
+    @media (max-width: 610px) {
       font-size: 21px;
     }
   }
-  
-  &__desc{
+
+  &__desc {
     padding-left: 10px;
     max-width: 600px;
-   display: flex;
-   flex-direction: column;
-   gap: 15px;
-   margin-bottom: 30px;
-  
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 30px;
   }
   &__text {
     font-size: 24px;
-    @media (max-width: 610px){
+    @media (max-width: 610px) {
       font-size: 20px;
     }
   }
 
-  &__search-title{
+  &__search-title {
     font-size: 25px;
-    box-shadow: 0px 1px 46px -9px rgb(7, 7, 241); 
-    @media (max-width: 400px){
+    box-shadow: 0px 1px 46px -9px rgb(7, 7, 241);
+    @media (max-width: 400px) {
       font-size: 22px;
     }
   }
 
-  &__search-items{
+  &__search-items {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
   }
-  &__search-item{
+  &__search-item {
     height: 60px;
     width: 350px;
     border: 2px solid lightblue;
@@ -77,54 +75,52 @@
     font-weight: bold;
     position: relative;
     font-size: 19px;
-    @media (max-width: 400px){
+    @media (max-width: 400px) {
       width: 250px;
     }
   }
 
-  &__search-date{
+  &__search-date {
     color: blue;
     cursor: pointer;
-    @media (max-width: 400px){
+    @media (max-width: 400px) {
       font-size: 16px;
     }
-    
   }
 
-  &__btn{
+  &__btn {
     font-size: 22px;
     padding: 5px 10px;
     border-radius: 0;
   }
 
-  &__date{
+  &__date {
     position: absolute;
     top: 50px;
     color: blue;
-
   }
 
-  &__date .rdrMonthPicker>select option{
+  &__date .rdrMonthPicker > select option {
     color: blue;
   }
 
-  &__date .rdrYearPicker>select option{
+  &__date .rdrYearPicker > select option {
     color: blue;
   }
 
   &__one-date {
-width: 100%;
-color: blue;
-background-color: white;
-text-align: center;
-font-size: 19px;
-font-weight: bold;
-padding: 10px;
-border: none;
-cursor: pointer;
+    width: 100%;
+    color: blue;
+    background-color: white;
+    text-align: center;
+    font-size: 19px;
+    font-weight: bold;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
   }
 
-  &__range-result{
+  &__range-result {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -132,26 +128,25 @@ cursor: pointer;
     gap: 20px;
   }
 
-  &__rangephoto-container{
+  &__rangephoto-container {
     display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 10px;
-  width: 410px;
-  height: 410px;
-  background-color: rgb(0, 0, 0);
-  border: 3px solid white;
-  border-radius: 20px;
-  overflow: hidden;
-  box-shadow: 0px 1px 46px -9px rgb(7, 19, 241);  
-  @media (max-width: 460px){
-    width: 320px;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    width: 410px;
+    height: 410px;
+    background-color: rgb(0, 0, 0);
+    border: 3px solid white;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 1px 46px -9px rgb(7, 19, 241);
+    @media (max-width: 460px) {
+      width: 320px;
+    }
   }
-}
 
   &__rangephoto-desc {
     padding: 10px 10px 0;
-
   }
 
   &__rangephoto-title {
@@ -170,7 +165,7 @@ cursor: pointer;
     cursor: zoom-in;
   }
 
-  &__photo-big{
+  &__photo-big {
     position: sticky;
     top: 0;
     left: 0;
@@ -181,16 +176,15 @@ cursor: pointer;
     justify-content: center;
   }
 
-  &__photo-wrap{
+  &__photo-wrap {
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-
   }
 
-   &__close{
+  &__close {
     position: absolute;
     top: 8%;
     right: 5%;
@@ -198,54 +192,55 @@ cursor: pointer;
     cursor: pointer;
   }
 
-  &__rangephoto-wrap-img{
-object-fit: contain;
-width: 70%;
-height: 60vh;
+  &__rangephoto-wrap-img {
+    object-fit: contain;
+    width: 70%;
+    height: 60vh;
   }
 
-  &__rangephoto-wrap-title{
+  &__rangephoto-wrap-title {
     padding-top: 30px;
-    box-shadow: 0px 1px 46px -9px rgba(149,9,230,1);  
+    box-shadow: 0px 1px 46px -9px rgba(149, 9, 230, 1);
   }
-  
- &__rangephoto-wrap-date{
-  color: rgb(169, 42, 248);
-  font-size: 20px;
- }
- 
- &__rangephoto-wrap-text{
-width: 70%;
-@media (max-width: 530px){
-  font-size: 13px;
- }
- }
 
- &__arrow-l{
-  position: absolute;
-  top: 50%;
-  left: 5%;
-  font-size: 40px;
-  cursor: pointer;
- }
+  &__rangephoto-wrap-date {
+    color: rgb(169, 42, 248);
+    font-size: 20px;
+  }
 
- &__arrow-r{
-  position: absolute;
-  top: 50%;
-  right: 5%;
-  font-size: 40px;
-  cursor: pointer;
- }
+  &__rangephoto-wrap-text {
+    width: 70%;
+    @media (max-width: 530px) {
+      font-size: 13px;
+    }
+  }
 
+  &__arrow-l {
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    font-size: 40px;
+    cursor: pointer;
+  }
+
+  &__arrow-r {
+    position: absolute;
+    top: 50%;
+    right: 5%;
+    font-size: 40px;
+    cursor: pointer;
+  }
 }
 
-.rovers__bigphoto-desc i{
+.rovers__bigphoto-desc i {
   color: rgb(145, 137, 137);
 }
 
-.react-datepicker__month-select, .react-datepicker__year-select {
+.react-datepicker__month-select,
+.react-datepicker__year-select {
   color: blue;
 }
-.react-datepicker__month-select option, .react-datepicker__year-select option {
+.react-datepicker__month-select option,
+.react-datepicker__year-select option {
   color: blue;
 }
